<resources>
    <string name="app_name">WasteCreative</string>

    <string name="dateFormat">Uploaded on %1$s</string>
    <string name="link_string"><u>click here</u></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_marketplace">Marketplace</string>
    <string name="cd_scan_btn">Go to waste scan page</string>
    <string name="explore_crafts">Explore Crafts</string>
    <string name="show_all">Show All</string>
    <string name="like_craft">Like this craft?</string>
    <string name="error_string">Error</string>
    <string name="start_detecting_household_waste">Start detecting household waste</string>
    <string name="tab_steps_text">Steps</string>
    <string name="tab_tools_and_material_text">Tools and Materials</string>
    <string name="title_activity_detail_craft">DetailCraftActivity</string>
    <string name="cd_shutter_btn">Shutter</string>
    <string name="cd_back_btn">Back</string>
    <string name="cd_from_gallery">Select from gallery</string>
    <string name="camera_disabled">Camera disabled</string>
    <string name="turn_on">Turn on</string>
    <string name="press_the_shutter_button_to_take_a_waste_picture">Press the shutter button to take a waste picture</string>
    <string name="permission_failed">Failed to get app permission</string>
    <string name="lorem">Lorem Ipsum</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="add_craft_photo">Add craft photo</string>
    <string name="up_to_12_mb">(up to 12 Mb)</string>
    <string name="craft_name">Craft Name</string>
    <string name="description">Description</string>
    <string name="tools_and_materials">Tools and Materials</string>
    <string name="video_tutorial_link">Video tutorial link (optional)</string>
    <string name="steps">Steps</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="upload">Upload</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="name">Username</string>
    <string name="Title_Login2">Please enter your account here</string>
    <string name="Title_Login">Welcome Back !</string>
    <string name="Title_register1">Register</string>
    <string name="Title_register2">Please enter your data here</string>
    <string name="Title_login3">Don’t have any account?</string>
    <string name="Title_login4">Sign up</string>
    <string name="Title_register3">Already have an account?</string>
    <string name="Title_onboarding1">Selamat Datang</string>
    <string name="Title_boarding2">\'\'Manfaat kan kembali</string>
    <string name="Title_boarding3">Limbah rumah tangga anda\'\'</string>
    <string name="bt_boarding">Get Started</string>
    <string name="verif_button">OK</string>
    <string name="state_verif">Upload Berhasil</string>
    <string name="failed_state">Upload Gagal</string>
    <string name="email_min">Email Tidak valid !!!</string>
    <string name="edit">Edit Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tab_text_1">Kerajinan</string>
    <string name="tab_text_2">Post</string>
    <string name="retry_string">Retry</string>
    <string name="tools_string">Tools</string>
    <string name="materials_strings">Materials</string>
    <string name="name_error">Masukan Username</string>
    <string name="password_error">Masukan Password</string>
    <string name="mail_error">Masukan Email</string>
    <string name="password_min">Password kurang dari 6 karakter</string>
    <string name="valid">Email dan password salah</string>
    <string name="validkosong">Email dan password tidak boleh kosong</string>
    <string name="waiting">Tunggu sebentar</string>
    <string name="isempty">Email telah di gunakan</string>
    <string name="keluar">Logout</string>
    <string name="comments">Comments</string>
    <string name="success">Success!</string>
    <string name="hi_string">Hi, %s</string>
    <string name="success_upload">Upload success</string>

</resources>